--- a/style.css
+++ b/style.css
@@ -117,6 +117,8 @@ TH { font:13px Verdana, Arial, Helvetica, sans-serif;
 
 .newsText { font:11px Verdana, Arial, Helvetica, sans-serif; }
 
+.paragraph { margin-left:5px; margin-right:5px; font:13px Verdana, Arial, Helvetica, sans-serif;  }
+
 .smallParagraph { font:11px Verdana, Arial, Helvetica, sans-serif;  }
 
 .code { }
